# exchange

./: .gitmodules  README.md
.github/: CODEOWNERS
.github/workflows/: discord.yml
backend/: .gitignore  .ignore  CMakeLists.txt  README.md  TODO.md  main.cpp  main.hpp
backend/include/: AuthManager.hpp  MarketData.hpp  WebSocketServer.hpp  main.hpp  market_data.hpp
backend/include/handlers/: Handlers.hpp  LoginHandler.hpp  SubscribeHandler.hpp  UnSubscribeHandler.hpp
backend/src/: AuthManager.cpp  MarketData.cpp  WebSocketServer.cpp  main.cpp  market_data.cpp
backend/src/handlers/: LoginHandler.cpp  SubscribeHandler.cpp  UnSubscribeHandler.cpp
backend/tests/: AuthManagerTests.cpp  MarketDataTests.cpp  test_runner.cpp
client/: package-lock.json  package.json
client/src/: main.ts
client/src/core/: socket.ts
frontend/src/: index.css  main.ts
frontend/src/components/: snapshot.ts
frontend/src/consts/: env.ts
frontend/src/core/: socket.ts  state.ts
frontend/src/utils/: benchmark.ts
simulator/: package-lock.json  package.json
simulator/src/: data.js  index.js
